# odoo-studio-extractor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: studio_mapping.md  usage.md
examples/: sample_report.md
src/odoo_studio_extractor/: __init__.py  __main__.py  cli.py  client.py  config.py
src/odoo_studio_extractor/extractors/: __init__.py  actions.py  fields.py  menus.py  models.py  security.py  views.py
src/odoo_studio_extractor/reports/: __init__.py  json_export.py  markdown.py
